# gamedev-old

./: LICENSE  README.md  run.py
chowdren/: __init__.py  build.py  common.py  data.py  image.py  object.py  project.py  run.py
chowdren/res/: default.xcf
objects/background/: runtime.cpp
objects/number/: runtime.cpp
objects/sprite/: edittime.py  runtime.cpp
runtime/: CMakeLists.txt  common.h  font.cpp  font.h  run.cpp
